tests/fixtures/invalid/none_lt_list.py
# Cannot compare with < None and List[int]
x: bool = None < [1, 2, 3]
